feat(Switch):Add basic darkmode switch

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -3,4 +3,15 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  height: 100vh;
+}
+
+.AppDark {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: black;
+  color:white;
+  height: 100vh;
 }
